fix all update method
